current month count api
