# public/docs/openapi.yaml
@@ -5,9 +5,83 @@ info:
   version: 1.0.0
 servers:
   -
-    url: 'https://app.spinfocom.net.in'
+    url: 'http://localhost:8000'
 paths:
+  '/api/payment/{profile_id}':
+    get:
+      summary: 'Show Payment'
+      operationId: showPayment
+      description: ''
+      parameters: []
+      responses:
+        401:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  message: Unauthenticated.
+                properties:
+                  message:
+                    type: string
+                    example: Unauthenticated.
+      tags:
+        - 'Payment Management'
+      security: []
+    parameters:
+      -
+        in: path
+        name: profile_id
+        description: 'The ID of the profile.'
+        example: placeat
+        required: true
+        schema:
+          type: string
+  /api/profiles:
+    get:
+      summary: ''
+      operationId: getApiProfiles
+      description: ''
+      parameters: []
+      responses:
+        401:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  message: Unauthenticated.
+                properties:
+                  message:
+                    type: string
+                    example: Unauthenticated.
+      tags:
+        - 'Profile Management'
+      security: []
   '/api/profiles/{id}':
+    get:
+      summary: 'Show Profile'
+      operationId: showProfile
+      description: ''
+      parameters: []
+      responses:
+        401:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  message: Unauthenticated.
+                properties:
+                  message:
+                    type: string
+                    example: Unauthenticated.
+      tags:
+        - 'Profile Management'
+      security: []
     put:
       summary: 'Update Profile'
       operationId: updateProfile
@@ -26,66 +100,162 @@ paths:
                 name:
                   type: string
                   description: 'The name of the user.'
-                  example: nulla
+                  example: quia
                 mobile:
                   type: string
                   description: 'The mobile number of the user.'
-                  example: est
+                  example: rerum
                 pan:
                   type: string
                   description: 'The pan number of the user.'
-                  example: blanditiis
+                  example: mollitia
                 address_1:
                   type: string
                   description: 'The address_1 of the user.'
-                  example: est
+                  example: hic
                 address_2:
                   type: string
                   description: 'The address_1 of the user.'
-                  example: quidem
+                  example: libero
                 city:
                   type: string
                   description: 'The city of the user.'
-                  example: itaque
+                  example: tenetur
                 state:
                   type: string
                   description: 'The state of the user.'
-                  example: odio
+                  example: blanditiis
                 pincode:
                   type: string
                   description: 'The pincode of the user.'
-                  example: quis
+                  example: quam
                 bank_name:
                   type: string
                   description: 'The bank name of the user.'
-                  example: alias
+                  example: eos
                 account_name:
                   type: string
                   description: 'The account name of the user.'
-                  example: impedit
+                  example: autem
                 account_no:
                   type: string
                   description: 'The account number of the user.'
-                  example: eos
+                  example: veniam
                 ifsc:
                   type: string
                   description: 'The ifsc number of the user.'
-                  example: atque
+                  example: odit
                 business_name:
                   type: string
                   description: 'The business_name of the user.'
-                  example: soluta
+                  example: accusamus
                 gstin:
                   type: string
                   description: 'The gstin of the user.'
-                  example: qui
+                  example: temporibus
       security: []
     parameters:
       -
         in: path
         name: id
         description: 'The ID of the profile.'
-        example: eos
+        example: laboriosam
+        required: true
+        schema:
+          type: string
+  '/api/profiles/{parent_id}/get_profiles':
+    get:
+      summary: ''
+      operationId: getApiProfilesParent_idGet_profiles
+      description: ''
+      parameters: []
+      responses:
+        401:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  message: Unauthenticated.
+                properties:
+                  message:
+                    type: string
+                    example: Unauthenticated.
+      tags:
+        - 'Profile Management'
+      security: []
+    parameters:
+      -
+        in: path
+        name: parent_id
+        description: 'The ID of the parent.'
+        example: tempora
+        required: true
+        schema:
+          type: string
+  /api/currnet_month_count:
+    get:
+      summary: 'Get Current Month Count'
+      operationId: getCurrentMonthCount
+      description: ''
+      parameters: []
+      responses:
+        401:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  message: Unauthenticated.
+                properties:
+                  message:
+                    type: string
+                    example: Unauthenticated.
+      tags:
+        - 'Profile Management'
+      security: []
+  '/api/profiles/{profile_no}/get_ref_profile':
+    get:
+      summary: ''
+      operationId: getApiProfilesProfile_noGet_ref_profile
+      description: ''
+      parameters: []
+      responses:
+        200:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  success: true
+                  message: ' Profiles Retrived successfully'
+                  data:
+                    Profiles: []
+                properties:
+                  success:
+                    type: boolean
+                    example: true
+                  message:
+                    type: string
+                    example: ' Profiles Retrived successfully'
+                  data:
+                    type: object
+                    properties:
+                      Profiles:
+                        type: array
+                        example: []
+      tags:
+        - 'Profile Management'
+      security: []
+    parameters:
+      -
+        in: path
+        name: profile_no
+        description: ''
+        example: PeC
         required: true
         schema:
           type: string
@@ -108,35 +278,35 @@ paths:
                 name:
                   type: string
                   description: 'Must not be greater than 255 characters.'
-                  example: yttarhvifrg
+                  example: btjlhmrztzeqfswbbg
                 email:
                   type: string
                   description: 'Must be a valid email address.'
-                  example: karolann46@example.org
+                  example: hmarquardt@example.com
                 mobile:
                   type: string
                   description: 'Must match the regex /^\+(?:\d{1}.'
-                  example: '+(:4'
+                  example: '+:8'
                 pan:
                   type: string
                   description: 'Must match the regex /^([a-zA-Z]){5}([0-9]){4}([a-zA-Z0-9]){1}?$/.'
-                  example: bKEbO8507a
+                  example: ImbzP2646t
                 password:
                   type: string
                   description: 'Must be at least 6 characters.'
-                  example: 'VO[{`R0'
+                  example: ';ZnT^70tY5&{Xz(p'
                 password_confirmation:
                   type: string
                   description: ''
-                  example: et
+                  example: nam
                 parent_id:
                   type: string
                   description: ''
-                  example: quod
+                  example: non
                 ref_id:
                   type: string
                   description: ''
-                  example: iure
+                  example: et
               required:
                 - name
                 - email
@@ -166,11 +336,11 @@ paths:
                 email:
                   type: string
                   description: 'Must be a valid email address.'
-                  example: jmedhurst@example.org
+                  example: zbernhard@example.org
                 password:
                   type: string
                   description: 'Must be at least 6 characters.'
-                  example: 'sA,N?''"'
+                  example: 'XyO.."n(pV-!@'
               required:
                 - email
                 - password
@@ -186,6 +356,9 @@ paths:
         - 'User Management'
       security: []
 tags:
+  -
+    name: 'Payment Management'
+    description: ' `'
   -
     name: 'Profile Management'
     description: "\nAPI for Managing Profile data"
